Render First Country!!!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ bevy = {version = "*", features = [
 "wayland"]}
 geo-bevy = "6.0.0"
 
+bevy_svg = "0.15.1"
+
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
