--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 bevy = {version = "*", features = [
 "dynamic_linking",
 "wayland"]}
-geo-bevy = "6.0.0"
 
-bevy_svg = "0.15.1"
+geojson = "0.24.1"
+bevy_2d_line = "0.1.3"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
