--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ bevy = {version = "*", features = [
 
 geojson = "0.24.1"
 bevy_2d_line = "0.1.3"
+serde_json = "1.0.137"
+bevy_polyline = "0.11.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
